[gd_scene load_steps=2 format=3 uid="uid://e32gwjcqhtp5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_1pjgo"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1pjgo")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
text = "RESUME"

[node name="restart_btn" type="Button" parent="menu_holder"]
layout_mode = 2
text = "RESTART"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
